Fixed wrapping issue with harmonic table

--- a/src/css/harmonic-table.css
+++ b/src/css/harmonic-table.css
@@ -1,15 +1,16 @@
 .harmonic-table {
 	margin: 1em;
 	height: 90%;
-	width: 90%;
+	width: 80%;
 	padding: calc(var(--hex-height) / 2) var(--hex-radius);
 	pointer-events: auto;
 	float: left;
 	overflow: auto;
+	white-space: nowrap;
 }
 
 .harmonic-table ul {
-	float: left;
+	display: inline-block;
 	list-style: none;
 	padding: 0;
 	margin: 0;
@@ -18,6 +19,10 @@
 
 .harmonic-table ul:nth-child(even) {
 	margin-top: calc((var(--hex-height) / 2) + (var(--hex-grid-margin) / 2));
+}
+
+.harmonic-table ul:nth-child(odd) {
+	margin-bottom: calc((var(--hex-height) / 2) + (var(--hex-grid-margin) / 2));
 }
 
 .harmonic-table ul li:last-child .hex {
